src/App.css
.App {
  height: 100vh;
  text-align: center;
  display: grid;
  grid-template-areas:
    'navbar header'
    'navbar main';
  grid-template-rows: 50px auto;
  grid-template-columns: 250px auto;
}

.App.navbar-hidden {
  grid-template-areas:
    'header'
    'main';
  grid-template-columns: auto;
}

.wrapper-header {
  grid-area: header;
  background: #ffffff;
  box-shadow: 0 .15rem 1.75rem 0 rgba(58,59,69,.15);
  position: fixed;
  height: 50px;
  width: calc(100% - 250px);
  padding: .5em 0;
  z-index: 1000;
  right: 0;
}

.wrapper-navbar {
  grid-area: navbar;
  background: #4e73df;
  position: fixed;
  width: 250px;
  height: 100vh;
}

.navbar-hidden .wrapper-navbar {
  display: none;
}

.navbar-hidden .wrapper-header {
  width: 100vw;
}

.wrapper-main {
  grid-area: main;
}

.dashboard-header {
  height: 100%;
  display: flex;
  align-items: center;
  padding: 0 1.5em;
}

.header-right {
  flex-grow: 1;
  text-align: right;
}

.dashboard-header .custom-switch {
  margin-left: 1.5em;
}

.rounded-circle {
  border-radius: 50%;
}

button.rounded-circle:hover {
  background: #eaecf4;
}

button.rounded-circle:active {
  background: #dddfeb;
}

.dropdown-menu .nav-link {
  padding: .25rem 1.5rem;
  color: #212529;
}

.dropdown-toggle::after {
  display: none;
}

.dashboard-navbar {
  padding: 0.5em 0;
}

.title-navbar {
  font-size: 3em;
  color: #ffffff;
  margin-bottom: .5em;
}

.dashboard-navbar a {
  color: #92b2d4;
  text-decoration: none;
  padding: .5em 1.5em;
}

.dashboard-navbar a:hover {
  color: #ffffff;
  background: #ffffff10;
}

.dashboard-navbar a:active {
  color: #ffffff;
  background: #ffffff1f;
}

.dashboard-navbar a.active {
  color: #ffffff;
  border-left: .25em solid #ffffff;
}

.dashboard-navbar a.active i {
  margin-left: -.25em
}

.navbar-list {
  text-align: start;
}

.navbar-close {
  position: absolute;
  right: 1em;
  top: 1.4em;
}

.navbar-close .btn-link {
  color: #ffffff;
}

.dashboard-home {
  padding: 1.5em;
  display: grid;
  grid-template-areas:
    'finances indicators'
    'resources flow';
  grid-template-columns: 50% 50%;
}

.chart-legends {
  display: flex;
  flex-wrap: wrap;
  font-size: .85em;
}

.legend {
  display: inline-block;
  margin-right: .5em;
  text-align: left;
}

.legend-dot {
  height: 10px;
  width: 10px;
  border-radius: 50%;
  display: inline-block;
  margin-right: .25em;
}

.home-finances {
  grid-area: finances;
  padding: 1em;
  gap: 1em;
}

.finances-wrapper {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap-reverse;
}

.finances-costs {
  width: calc(50% - .5em);
  margin-right: 1em;
}

.finances-alt-wrapper {
  width: calc(50% - .5em);
}

.finances-costs .card, .finances-income .card {
  width: 100%;
}

.finances-costs .card-body:first-of-type > div, .finances-income .card-body > div:first-of-type {
  height: 100% !important;
}

.flow-patient-flow .card-body {
  width: 100%;
  height: 100%;
  display: table;
}

.card-chart-wrapper {
  width: 100%;
  height: 100%;
  display: table-row;
}

.finances-income {
  width: 100%;
  margin-bottom: 1em;
}

.finances-total {
  text-align: left;
}

.finances-total .card {
  margin: 0 auto;
  width: fit-content;
}

.home-indicators {
  grid-area: indicators;
  padding: 1em;
}

.finances-title, .indicators-title, .flow-title, .resources-title {
  text-align: left;
  overflow: auto;
  margin-bottom: 1em;
}

.indicators-wrapper {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  margin-bottom: 1em;
}

.indicators-performance {
  width: calc(50% - .5em);
  margin-right: 1em;
}

.indicators-quality {
  width: calc(50% - .5em);
}

.indicators-quality .card, .indicators-performance .card {
  display: block !important;
}

.indicators-other {
  grid-area: indicators-other;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.indicators-other .card, .flow-indicators .card {
  margin: 0 1em;
}

.home-resources {
  grid-area: resources;
  padding: 1em;
}

.home-resources h5 {
  margin-bottom: 0;
}

.home-resources i {
  font-size: 2em;
}

.home-resources .badge {
  margin-left: .5em;
}

.resources-wrapper {
  display: flex;
  flex-direction: row;
}

.resources-wrapper .card {
  margin-right: 1em;
  margin-bottom: 1em;
}

.resources-personnel {
  width: 50%;
  display: flex;
  flex-direction: column;
}

.resources-other {
  width: 50%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  height: fit-content;
  justify-content: center;
}

.home-flow {
  grid-area: flow;
  padding: 1em;
}

.flow-patient-flow {
  width: 100%;
  height: 400px;
  grid-area: flow-patient-flow;
}

.flow-indicators {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin-top: 1em;
}

.indicators-performance .card, .indicators-quality .card, .flow-patient-flow .card {
  width: 100%;
  height: 100%;
}

.dashboard-home .card {
  display: table;
}

.dashboard-home .mb-2, .home-finances .card-title {
  margin-bottom: 0;
}

.dashboard-home .card-subtitle {
  margin-top: 0;
}

.dashboard-home .card-title {
  margin-bottom: 0;
}

.dashboard-home .card-body {
  padding: 1em;
}

@media (max-width: 1200px) {
  .dashboard-home {
    padding: 1.5em;
    display: grid;
    grid-template-areas:
      'finances'
      'indicators'
      'resources'
      'flow';
    grid-template-columns: auto;
    grid-template-rows: auto;
  }
}

@media (max-width: 768px) {
  .finances-wrapper {
    flex-direction: column;
  }

  .finances-costs {
    width: 100%;
    margin-right: 0;
    margin-bottom: 1em;
  }

  .finances-alt-wrapper {
    width: 100%;
  }

  .resources-wrapper {
    display: flex;
    flex-direction: column;
  }

  .resources-personnel {
    width: 100%;
  }
  
  .resources-other {
    width: 100%;
  }
}

@media (min-width: 577px) {
  .navbar-close {
    display: none;
  }
}

@media (max-width: 576px) {
  .App {
    grid-template-areas:
      'navbar';
    grid-template-columns: auto;
    grid-template-rows: auto;
  }

  .App.navbar-hidden {
    grid-template-areas:
      'header'
      'main';
    grid-template-columns: auto;
    grid-template-rows: 50px auto;
  }

  .wrapper-header, .wrapper-navbar {
    width: 100vw;
  }

  .wrapper-header, .wrapper-main {
    display: none;
  }

  .navbar-hidden .wrapper-header, .navbar-hidden .wrapper-main {
    display: initial;
  }
}

